<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.com.tomaszstrzelecki.ecs.MainActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/label1"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/sensors_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginTop="8dp"
                android:dropDownWidth="match_parent"
                android:minHeight="40dp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label2"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <Spinner
                android:id="@+id/sensitivity_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginTop="8dp"
                android:dropDownWidth="match_parent"
                android:minHeight="40dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label3"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/timeLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minutes"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColorLink="@android:color/background_dark" />

            <Button
                android:id="@+id/monitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/start"
                android:textSize="26sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
